Bug 1325918 - Ignore MsgDropped errors in BackgroundChildImpl. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D83558